initial test training run complete

--- a/fine_tuneing.ipynb
+++ b/fine_tuneing.ipynb
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "4f363132-a392-47af-b5a5-37105c87940d",
    "metadata": {},
    "outputs": [
@@ -623,8 +623,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='141' max='240' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [141/240 1:38:48 < 1:10:22, 0.02 it/s, Epoch 1.75/3]\n",
+       "      <progress value='240' max='240' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [240/240 2:52:26, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -642,6 +642,18 @@
        "      <td>1.573388</td>\n",
        "      <td>0.563910</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.138061</td>\n",
+       "      <td>0.684837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.015131</td>\n",
+       "      <td>0.708020</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -651,6 +663,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=240, training_loss=1.4236225128173827, metrics={'train_runtime': 10368.7903, 'train_samples_per_second': 0.185, 'train_steps_per_second': 0.023, 'total_flos': 503657861971968.0, 'train_loss': 1.4236225128173827, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -659,8 +681,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
+   "id": "06ba6711-802f-44d1-a402-3ac9771b619c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='200' max='200' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [200/200 18:44]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 1.0151312351226807,\n",
+       " 'eval_accuracy': 0.7080200501253133,\n",
+       " 'eval_runtime': 1129.3866,\n",
+       " 'eval_samples_per_second': 1.413,\n",
+       " 'eval_steps_per_second': 0.177,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "id": "0979730d-3d47-47a5-af1f-97e62d5b9bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(\"./first_full_run\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e36a711-c1dc-41e7-a0e7-2c3e551a9cde",
    "metadata": {},
    "outputs": [],
    "source": []
