--- a/fine_tuneing.ipynb
+++ b/fine_tuneing.ipynb
@@ -421,6 +421,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "cb214468-1c32-4112-b288-a7279945a3e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create id2label and label2id\n",
+    "labels = train_data.features['label'].names\n",
+    "ids = range(NUM_LABELS)\n",
+    "id2label = dict(zip(ids, labels))   \n",
+    "label2id = dict(zip(labels, ids)) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6ec609ec-0283-4c5d-a4bf-b168e1f53fdb",
    "metadata": {},
@@ -579,7 +593,7 @@
     }
    ],
    "source": [
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=NUM_LABELS, torch_dtype=\"auto\")"
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=NUM_LABELS, label2id=label2id, id2label=id2label)"
    ]
   },
   {
@@ -1118,27 +1132,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
+   "id": "5180fe54-0f5c-4538-8ce7-1d6cb78d8ea3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "id": "76878f97-4f2b-428e-99d4-d16230e64f56",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_model = AutoModelForSequenceClassification.from_pretrained(\"tuned_model\")\n",
+    "my_tokenizer = AutoTokenizer.from_pretrained(\"tokenizer\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "c5de2fa5-1446-440f-a443-399e18fe04da",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_text_classifier = pipeline(\"text-classification\", model=my_model, tokenizer=my_tokenizer)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "id": "9cd760d7-9234-4cef-a565-feb150417a03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "row_n = 4\n",
+    "val_text = dataset['validation']['text'][row_n]\n",
+    "val_label = dataset['validation']['label'][row_n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "4284ce7d-3947-47e6-a944-8efe04c67f73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_model_result = my_text_classifier(val_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "da86ccb3-4b67-4284-aff3-da13e6abb232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text to classify:\n",
+      " A federal law against FGM was ruled unconstitutional today on the grounds that the powers under which the law was written were not applicable to the activity being criminalized.\n",
+      "\n",
+      "\n",
+      "Are there any other powers the US federal government has to criminalize FGM?\n",
+      "\n",
+      "\n",
+      " \n",
+      "\n",
+      "The correct label from the dataset: criminal-law \n",
+      "Our model classification: constitutional-law with a score of 0.11644306778907776\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Text to classify:\\n\", val_text, \n",
+    "      \"\\n\\nThe correct label from the dataset:\", val_label, \n",
+    "      \"\\nOur model classification:\", my_model_result[0]['label'], \"with a score of\", my_model_result[0]['score'])"
+   ]
   },
   {
    "cell_type": "markdown",
