pushed model to hub

--- a/fine_tuneing.ipynb
+++ b/fine_tuneing.ipynb
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 232,
    "id": "1065c5b9-a195-42b8-94c5-31913c3d5c83",
    "metadata": {},
    "outputs": [],
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 234,
    "id": "8062d12b-ed1a-47ed-8301-7892acab1fc9",
    "metadata": {},
    "outputs": [],
@@ -845,25 +845,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 236,
    "id": "e506ff48-cce6-44ad-9e4a-75a75f051c1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create the training args for each tuning run\n",
     "tuning_training_args = TrainingArguments(\n",
-    "    output_dir=\"tuning\",\n",
+    "    output_dir=\"model_tuning\",\n",
     "    eval_strategy=\"epoch\",\n",
     "    learning_rate=2e-5,  # Placeholder; will be overridden by the hyperparameter search\n",
     "    per_device_train_batch_size=16,  # Placeholder; will be overridden by the hyperparameter search\n",
     "    num_train_epochs=3,  # Placeholder; will be overridden by the hyperparameter search\n",
     "    logging_dir=\"./logs\",\n",
+    "    push_to_hub=True # Optional\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 238,
    "id": "21e79a69-9cb4-4890-8105-ac971c8dcc56",
    "metadata": {},
    "outputs": [
@@ -889,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 240,
    "id": "fa0a0c8c-94e4-40cf-8704-940dc42ea0fb",
    "metadata": {},
    "outputs": [
@@ -897,107 +898,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2025-01-27 12:28:36,044] A new study created in memory with name: no-name-46b87f31-8f7e-4df0-8aac-305a4fc31550\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='14' max='14' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [14/14 04:45, Epoch 2/2]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>2.518948</td>\n",
-       "      <td>0.320000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>2.444597</td>\n",
-       "      <td>0.320000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[I 2025-01-27 12:33:44,265] Trial 0 finished with value: 0.32 and parameters: {'learning_rate': 7.68747275982173e-05, 'per_device_train_batch_size': 8, 'num_train_epochs': 2, 'weight_decay': 0.09517647933317472}. Best is trial 0 with value: 0.32.\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='4' max='4' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [4/4 07:11, Epoch 2/2]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>2.760189</td>\n",
-       "      <td>0.080000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>2.699468</td>\n",
-       "      <td>0.080000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[I 2025-01-27 12:44:39,397] Trial 1 finished with value: 0.08 and parameters: {'learning_rate': 4.964141586674918e-05, 'per_device_train_batch_size': 32, 'num_train_epochs': 2, 'weight_decay': 0.08643573610677178}. Best is trial 0 with value: 0.32.\n",
+      "[I 2025-01-27 16:30:25,650] A new study created in memory with name: no-name-d5b6c06e-63df-43f5-8862-3805f81d8752\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -1009,7 +910,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='20' max='20' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [20/20 14:49, Epoch 5/5]\n",
+       "      [20/20 23:51, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1024,32 +925,32 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>2.750272</td>\n",
-       "      <td>0.060000</td>\n",
+       "      <td>2.564356</td>\n",
+       "      <td>0.320000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>No log</td>\n",
-       "      <td>2.647270</td>\n",
-       "      <td>0.180000</td>\n",
+       "      <td>2.964684</td>\n",
+       "      <td>0.040000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>No log</td>\n",
-       "      <td>2.623552</td>\n",
-       "      <td>0.260000</td>\n",
+       "      <td>2.424800</td>\n",
+       "      <td>0.320000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>No log</td>\n",
-       "      <td>2.600725</td>\n",
-       "      <td>0.280000</td>\n",
+       "      <td>2.441561</td>\n",
+       "      <td>0.320000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>No log</td>\n",
-       "      <td>2.577870</td>\n",
-       "      <td>0.300000</td>\n",
+       "      <td>2.457923</td>\n",
+       "      <td>0.320000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -1065,7 +966,113 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2025-01-27 13:00:16,738] Trial 2 finished with value: 0.3 and parameters: {'learning_rate': 3.366025426026898e-05, 'per_device_train_batch_size': 16, 'num_train_epochs': 5, 'weight_decay': 0.04170280040173576}. Best is trial 0 with value: 0.32.\n"
+      "[I 2025-01-27 17:26:24,913] Trial 0 finished with value: 0.32 and parameters: {'learning_rate': 0.0003155201980058913, 'per_device_train_batch_size': 16, 'num_train_epochs': 5, 'weight_decay': 0.08349846837378451}. Best is trial 0 with value: 0.32.\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='12' max='12' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [12/12 09:02, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>2.759495</td>\n",
+       "      <td>0.060000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>2.685518</td>\n",
+       "      <td>0.080000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>2.666912</td>\n",
+       "      <td>0.160000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-27 18:05:00,977] Trial 1 finished with value: 0.16 and parameters: {'learning_rate': 3.057465826568694e-05, 'per_device_train_batch_size': 16, 'num_train_epochs': 3, 'weight_decay': 0.03723974867102458}. Best is trial 0 with value: 0.32.\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='8' max='8' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [8/8 05:47, Epoch 2/2]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>2.832538</td>\n",
+       "      <td>0.080000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>2.806947</td>\n",
+       "      <td>0.080000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-27 18:45:13,397] Trial 2 finished with value: 0.08 and parameters: {'learning_rate': 1.2303999115294106e-05, 'per_device_train_batch_size': 16, 'num_train_epochs': 2, 'weight_decay': 0.08430555410163074}. Best is trial 0 with value: 0.32.\n"
      ]
     }
    ],
@@ -1080,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 241,
    "id": "bd6b1d40-9ff2-4a2e-90bb-aff655c21661",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1095,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Hyperparameters: {'learning_rate': 7.68747275982173e-05, 'per_device_train_batch_size': 8, 'num_train_epochs': 2, 'weight_decay': 0.09517647933317472}\n"
+      "Best Hyperparameters: {'learning_rate': 0.0003155201980058913, 'per_device_train_batch_size': 16, 'num_train_epochs': 5, 'weight_decay': 0.08349846837378451}\n"
      ]
     }
    ],
@@ -1098,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 253,
    "id": "83d08274-d336-41bb-a0ba-126631b3b464",
    "metadata": {},
    "outputs": [
@@ -1112,14 +1119,77 @@
        " 'tokenizer\\\\tokenizer.json')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tuning_trainer.model.save_pretrained(\"tuned_model\")\n",
+    "#tuning_trainer.model.save_pretrained(\"tuned_model\") not used when pushing model to hub\n",
     "tuning_trainer.processing_class.save_pretrained(\"tokenizer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "15504a7d-50d8-434a-a30b-c3269b047124",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a23e4f7982fe4b43a649b32869faa1df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "training_args.bin:   0%|          | 0.00/5.30k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f554b2c70ff3426e8f51cbe8efae87be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/433M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "469917214a084550a4b30731a310a8b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Upload 2 LFS files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/lnewbould/test_dir/commit/6394b4ed4b0d22d08adf259a5a66b46af2854981', commit_message='End of training', commit_description='', oid='6394b4ed4b0d22d08adf259a5a66b46af2854981', pr_url=None, repo_url=RepoUrl('https://huggingface.co/lnewbould/test_dir', endpoint='https://huggingface.co', repo_type='model', repo_id='lnewbould/test_dir'), pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.push_to_hub() # to be used when push_to_hub = True"
    ]
   },
   {
@@ -1142,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 249,
    "id": "76878f97-4f2b-428e-99d4-d16230e64f56",
    "metadata": {},
    "outputs": [],
@@ -1226,24 +1296,39 @@
    "id": "8d4cd395-5a77-4e18-888d-ced1b885e8ac",
    "metadata": {},
    "source": [
-    "## Puhing model to hub"
+    "## Pushing model to hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "6cd9045d-39e1-405a-ae9a-2f05d271a565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import notebook_login\n",
+    "notebook_login()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e66eb71-06d2-41bb-8bc8-15434284b96c",
+   "id": "14891e0b-48ef-4202-8c98-7e7507715582",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_model.push_to_hub(\"my-test-model\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d36d5357-5f25-4722-842c-d644980b9f6a",
+   "id": "5812455f-991d-4f54-8f20-8278ba08c136",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# show we can also deploy model to endpoint"
+   ]
   },
   {
    "cell_type": "markdown",
